--- a/marketplace/templates/marketplace/announcement_player_for_club.html
+++ b/marketplace/templates/marketplace/announcement_player_for_club.html
@@ -36,7 +36,7 @@
                     Pozycja
                 </div>
                 <div class="col-6 col-md-3 text-center">
-                    <h5>{{ object.league|default:'-' }}</h5>
+                    <h5>{{ object.league.display_league_top_parent|default:'-' }}</h5>
                     Aktualny poziom
                 </div>
                 <div class="col-6 col-md-3 text-center">
