feature/PM-133: Removed unnecessary letters

--- a/soccerbase/templates/soccerbase/tables/table_coaches_card.html
+++ b/soccerbase/templates/soccerbase/tables/table_coaches_card.html
@@ -86,7 +86,7 @@
             </div >
             <div class="sc-cell d-none d-md-flex col-md-2 text-left">
               <a href="{{ object.profile.team_object.get_league_permalink }}">
-                 {{ object.profile.display_league_top_parent|default:''|title  }}dd
+                 {{ object.profile.display_league_top_parent|default:''|title  }}
               </a>
             </div >
             <div class="sc-cell d-none d-md-flex col-3 col-md-2 text-left">
