--- a/app/templates/platform/navigation/_nav_coach.html
+++ b/app/templates/platform/navigation/_nav_coach.html
@@ -5,7 +5,12 @@
 {% if user.is_authenticated %}
     <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}?tag=dlaTrenera">{% trans 'Produkty PlayMaker' %}</a></li>
-    <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_requests'%}">{% trans 'Powiadomienia' %}{% include 'platform/navigation/_nav_badge_requests.html' %} </a></li>
+    <li class="nav-item">
+        <a class="nav-link d-lg-flex d-md-block email-logo pt-0" href="{% url 'profiles:my_requests'%}">
+            <img src="{% static 'assets/img/navbar/email.png' %}" alt="">
+            {% include 'platform/navigation/_nav_badge_requests.html' %} 
+        </a>
+    </li>
     {% include 'platform/navigation/_nav.html'%}
     <li class="nav-item">{% get_my_team_link css_class='nav-link' %}</li>
 {% endif %}
