--- a/backend/static/assets/css/style.css
+++ b/backend/static/assets/css/style.css
@@ -444,13 +444,26 @@ nav .logo a{
   font-family: 'PT Sans', sans-serif;
 }
 
+.email-logo img{
+  max-height: 22px;
+  opacity: .5;
+}
+
+.email-logo{
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+
+
 /* Desktop Navigation */
 .nav-menu ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-
 
 .nav-menu> ul {
   display: flex;
