--- a/backend/static/assets/css/style.css
+++ b/backend/static/assets/css/style.css
@@ -444,6 +444,18 @@ nav .logo a{
   font-family: 'PT Sans', sans-serif;
 }
 
+.view-logo img{
+  max-height: 22px;
+  opacity: .5;
+}
+
+.view-logo{
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
 /* Desktop Navigation */
 .nav-menu ul {
   margin: 0;
