fixing marketpalce annoucement to use player ref

--- a/marketplace/templates/marketplace/announcement_player_for_club.html
+++ b/marketplace/templates/marketplace/announcement_player_for_club.html
@@ -18,15 +18,15 @@
             </div>
 
             <div class="card-text">
-                <small class="text-muted"> {{ object.profile.playermetrics.season_summary.games_played|default:'0' }} mecze </small>
+                <small class="text-muted"> {{ player.profile.playermetrics.season_summary.games_played|default:'0' }} mecze </small>
             </div>
 
             <div class="card-text">
-                <small class="text-muted"> {{ object.profile.playermetrics.season_summary.minutes_played |default:'0' }} minuty </small>
+                <small class="text-muted"> {{ player.profile.playermetrics.season_summary.minutes_played |default:'0' }} minuty </small>
             </div>
 
             <div class="card-text">
-                <small class="text-muted"> {{ object.profile.playermetrics.season_summary.team_goals|default:'0' }} bramki </small>
+                <small class="text-muted"> {{ player.profile.playermetrics.season_summary.team_goals|default:'0' }} bramki </small>
             </div>
         </div>
         <div class="col-12 card-text text-muted">
