Changed description from Produkty PlayMaker to Produkty

--- a/app/templates/platform/navigation/_nav_other.html
+++ b/app/templates/platform/navigation/_nav_other.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 
 
-<li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}?tag=dlaKibica">{% trans 'Produkty PlayMaker' %}</a></li>
+<li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}?tag=dlaKibica">{% trans 'Produkty' %}</a></li>
 {% include 'platform/navigation/_nav.html'%}
