--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -242,7 +242,7 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="icofont-listine-dots"></i>
-                  <h4>Produkty PlayMaker</h4>
+                  <h4>Produkty</h4>
                   <p>Dostęp do piłkarskich produktów, konsultacji dietetycznych, trenerów przygotowania motorycznego, siłowego, piłkarskiego oraz mentalnego.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
