--- a/backend/templates/partials/_menuitems.html
+++ b/backend/templates/partials/_menuitems.html
@@ -13,7 +13,7 @@
     </div>
 </li>
 <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
-<li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}">{% trans 'Produkty PlayMaker' %}</a></li>
+<li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}">{% trans 'Produkty' %}</a></li>
 {% comment %} <li><a href="/products/">Produkty</a></li> {% endcomment %}
 <li class="nav-item"><a class="nav-link" href="/transfer/">{% trans 'Transfer' %}</a></li>
 <li class="nav-item"><a class="nav-link" href="/scouting/">{% trans 'Skauting' %}</a></li>
