--- a/app/templates/platform/navigation/_nav_club.html
+++ b/app/templates/platform/navigation/_nav_club.html
@@ -4,17 +4,17 @@
 
 
 {% if user.is_authenticated %}
+
+    {% include 'platform/navigation/_nav.html'%}  
+
     <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="https://www.scoutmaker.pro/">{% trans 'Skauting' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="/transfer/">Transfer</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'plays:list'%}">{% trans 'Rozgrywki' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="/fantasy?season={{current_season}}&is_senior=true">{% trans 'Fantasy' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}?tag=dlaKlubu">{% trans 'Produkty' %}</a></li>
 
-<li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}?tag=dlaKlubu">{% trans 'Produkty' %}</a></li>
+    {% include 'platform/navigation/_nav_icons.html' %}
 
-    <li class="nav-item">
-        <a class="nav-link d-lg-flex d-md-block email-logo pt-0" href="{% url 'profiles:my_requests'%}">
-            <img src="{% static 'assets/img/navbar/email.png' %}" alt="">
-            {% include 'platform/navigation/_nav_badge_requests.html' %} 
-        </a>
-    </li>
 
-    {% include 'platform/navigation/_nav.html'%}            
-    <li class="nav-item">{% get_my_club_link css_class='nav-link'%}</li>
 {% endif %}
