--- a/app/templates/platform/navigation/_nav_player.html
+++ b/app/templates/platform/navigation/_nav_player.html
@@ -2,18 +2,17 @@
 {% load static %}
 
 {% if user.is_authenticated %}
-    <li class="nav-item"><a class="nav-link" href="/transfer/">Transfer</a></li>
+    {% include 'platform/navigation/_nav.html'%}
+
     <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="https://www.scoutmaker.pro/">{% trans 'Skauting' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="/transfer/">Transfer</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'plays:list'%}">{% trans 'Rozgrywki' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="/fantasy?season={{current_season}}&is_senior=true">{% trans 'Fantasy' %}</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}?tag=dlaPiłkarza">{% trans 'Produkty' %}</a></li>
 
-    <li class="nav-item">
-        <a class="nav-link d-lg-flex d-md-block email-logo pt-0" href="{% url 'profiles:my_requests'%}">
-            <img src="{% static 'assets/img/navbar/email.png' %}" alt="">
-            {% include 'platform/navigation/_nav_badge_requests.html' %}
-        </a>
-    </li>
+    {% include 'platform/navigation/_nav_icons.html' %}
 
-    {% include 'platform/navigation/_nav.html'%}
     {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_carrier'%}">{% trans 'Kariera' %}</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_fantasy'%}">{% trans 'Fantasy' %}</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_games'%}">{% trans 'Mecze' %}</a></li> {% endcomment %}
