--- a/backend/templates/partials/_menuitems.html
+++ b/backend/templates/partials/_menuitems.html
@@ -1,9 +1,10 @@
 {% load i18n %}
-<li class="nav-item" ><a class="nav-link" href="/about-project/">{% trans 'O projekcie' %}</a></li>
+{% load static %}
+
+
 {% comment %} <li><a href="#services">Fantasy</a></li>
 <li><a href="#portfolio">Rozgrywki</a></li> {% endcomment %}
-<li class="nav-item" ><a class="nav-link" href="/blog/">{% trans 'Blog' %}</a></li>
-<li class="nav-item"><a class="nav-link" href="/fantasy?season={{current_season}}&is_senior=true">{% trans 'Fantasy' %}</a></li>
+
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="">{% trans 'Bazy' %}</a>
     <div class="dropdown-menu">
@@ -13,10 +14,32 @@
     </div>
 </li>
 <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
-<li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}">{% trans 'Produkty' %}</a></li>
 {% comment %} <li><a href="/products/">Produkty</a></li> {% endcomment %}
+<li class="nav-item"><a class="nav-link" href="https://www.scoutmaker.pro/">{% trans 'Skauting' %}</a></li>
 <li class="nav-item"><a class="nav-link" href="/transfer/">{% trans 'Transfer' %}</a></li>
-<li class="nav-item"><a class="nav-link" href="/scouting/">{% trans 'Skauting' %}</a></li>
+<li class="nav-item"><a class="nav-link" href="{% url 'plays:list'%}">{% trans 'Rozgrywki' %}</a></li>
+<li class="nav-item"><a class="nav-link" href="/fantasy?season={{current_season}}&is_senior=true">{% trans 'Fantasy' %}</a></li>
+<li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}">{% trans 'Produkty' %}</a></li>
+
+{% if not request.user.is_authenticated %}
+    <li class="nav-item" ><a class="nav-link" href="/about-project/">{% trans 'O projekcie' %}</a></li>
+{% endif %}
+
+{% if not user.is_authenticated %}
+    <li class="nav-item" ><a class="nav-link" href="/blog/">{% trans 'Blog' %}</a></li>
+{% endif %}
+
+{% if request.user.is_authenticated %}
+    {% include 'platform/navigation/_nav_icons.html' %}
+{% else %}
+    {% comment %} <!-- TODO  waiting for the release v1.5--> 
+    <li class="nav-item">
+        <a class="nav-link d-lg-flex d-md-block view-logo pt-0" href="">
+            <img src="{% static 'assets/img/navbar/search.png' %}" alt="">
+        </a>
+    </li>
+    {% endcomment %}
+{% endif %}
 {% comment %} <li><a href="/blog">Blog</a></li> {% endcomment %}
 {% comment %} <li><a href="#contact">Kontakt</a></li> {% endcomment %}
 
