--- a/marketplace/templates/marketplace/announcement.html
+++ b/marketplace/templates/marketplace/announcement.html
@@ -19,3 +19,7 @@
 {% elif object|classname == "CoachForClubAnnouncement" %}
 {% include 'marketplace/announcement_coach_for_club.html' with object=object %}
 {% endif %}
+
+<script>
+    const userAnnouncement = '{{ request.user.id }}'
+</script>
