Restricted users to send announcements

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -158,7 +158,7 @@ onReady(function() {
       $('#micro-messages').empty();
       $('#micro-messages').append(
           '<div class="alert alert-success micro-message" data-aos-anchor-placement="top-center" data-aos-delay="800" data-aos="slide-down" data-delay="2000" role="alert" style=" border-radius:16px; padding:4px 8px; font-size: .8rem;">' + body + '</div>');
-      $(".micro-message").toast('show', function() {}, {delay: 3000});
+      $(".micro-message").toast('show', function() {});
   }
 
   $(document).ready(function(){
