--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -233,6 +233,7 @@
                     {% include 'marketplace/_empty_data.html' %}
                 </div>
             {% endfor %}
+        {% include 'profiles/modals/_register_modal.html' %}
         </div>
         {% include 'platform/partials/_pagination.html' with object_type='ogłoszeń' %}
     </div>
