--- a/app/templates/platform/buttons/action_script.html
+++ b/app/templates/platform/buttons/action_script.html
@@ -1,5 +1,3 @@
-
-
 {% if not off %}
 
   {% with multiple_options=multiple_options button_attrs=button_attrs button_class=button_class button_text=button_text button_icon=button_icon button_script=button_script button_id=button_id button_text_prefix=button_text_prefix button_text_suffix=button_text_suffix  %}
@@ -8,17 +6,23 @@
                 <button class="btn-request dropdown-toggle" type="button" id="addAnnoucementButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="icofont-plus"></i> Dodaj ogłoszenie</button>
                 <div class="dropdown-menu" aria-labelledby="addAnnoucementButton">
                     {% for option in options %}
-                        <a class="dropdown-item" href="{% if modals.no_club.load %}#noClubModal"{% else %}#addAnnouncementModal" onclick="get_add_announcement_form(event, '', '', '{{ option.flag }}')"{% endif %} data-toggle="modal" data-target="{% if modals.no_club.load %}#noClubModal{% else %}#addAnnouncementModal{% endif %}" data-ann-action-name="{{ option.flag }}">{{ option.friendly_name }}</a>
+                        <a class="dropdown-item"
+                           href="{% if modals.no_club.load %}#noClubModal{% else %}#addAnnouncementModal"
+                           onclick="get_add_announcement_form(event, '', '', '{{ option.flag }}')"{% endif %}
+                           ZZdata-toggle="modal"
+                           data-target="{% if modals.no_club.load %}#noClubModal{% else %}#addAnnouncementModal{% endif %}"
+                           data-ann-action-name="{{ option.flag }}">{{ option.friendly_name }}
+                        </a>
                     {% endfor %}
                 </div>
             </div>
 
     {% elif modals.register.load %}
-        <button 
-            {{ button_attrs }} 
-            {% if button_id %} id="{{ button_id }}" {% endif %}  
-            class="{{ button_class }} {% if active_class %}{{ active_class }}{% endif %} {% if button_icon %} icofont-{{ button_icon }} {% endif %}" 
-            data-toggle="modal" 
+        <button
+            {{ button_attrs }}
+            {% if button_id %} id="{{ button_id }}" {% endif %}
+            class="{{ button_class }} {% if active_class %}{{ active_class }}{% endif %} {% if button_icon %} icofont-{{ button_icon }} {% endif %}"
+            data-toggle="modal"
             data-target="#{{ modals.register.name }}"
         >
             {{ button_text_prefix }} {{ button_text }} {{ button_text_suffix}}
