--- a/marketplace/templates/marketplace/announcement_club_for_coach.html
+++ b/marketplace/templates/marketplace/announcement_club_for_coach.html
@@ -63,17 +63,16 @@
         </div>
         <div class="row card-text text-center centered-div">
             <div class="card-text pull-right">
-                {% if user.is_coach %}
-                    {% announcement_response object %}
-                {% elif user.is_club %}
+                {% if user.is_club %}
                     {% announcement_edit object %}
+                {% elif not user.is_player %}
+                    {% announcement_response object %}
                 {% endif %}
             </div>
 
             <div>
               <button type="button" class="btn-request" onclick="window.location.href='{{ object.club.get_permalink }}';">Zobacz profil</button>
             </div>
-
         </div>
     </div>
 </div>
