Fixed searching coaches by voivodeship and team name

--- a/soccerbase/templates/soccerbase/tables/filters/filter_input_team_name.html
+++ b/soccerbase/templates/soccerbase/tables/filters/filter_input_team_name.html
@@ -1,3 +1,9 @@
 
 
-<input class="form-control" style="width:{{ size }}px;" type="text" value="{{ request.GET.team_name }}" name="team_name" placeholder="drużyna">
+<input class="form-control"
+       style="width:{{ size }}px;"
+       type="text"
+       value="{{ request.GET.team_name }}"
+       name="team_name"
+       placeholder="drużyna"
+>
