Fixed typo in edit profile page

--- a/profiles/templates/profiles/edit_profile.html
+++ b/profiles/templates/profiles/edit_profile.html
@@ -26,8 +26,8 @@
       {% crispy profile_form %}
       
       <div class="col-12">
-        <button type="submit" name="update" value="Update" id="submit-id-update">{
-          % trans 'Aktualizuj CV' %}
+        <button type="submit" name="update" value="Update" id="submit-id-update">
+            {% trans 'Aktualizuj CV' %}
         </button>
       </div>
 
