--- a/plays/templates/plays/partials/game_with_pic.html
+++ b/plays/templates/plays/partials/game_with_pic.html
@@ -1,13 +1,16 @@
-
-<div style="d-flex">
-{% if image_left %}
-<img width="20" class="avatar rounded img-responsive" title="profile picture" src="{{ pic }}">
-
-{% endif %}
-<span>
-{% if url %} <a href="{{ url }}"> {{ name }} </a>{% else %} {{ name }} {% endif %}
-</span>
-{% if not image_left %}
-<img width="20" class="avatar rounded img-responsive" title="profile picture" src="{{ pic }}">
-{% endif %}
+<div>
+    {% if image_left %}
+        <img width="20" class="avatar rounded img-responsive"
+             title="profile picture" src="{{ pic }}">
+    {% endif %}
+        <span>
+            {% if url %}
+                <a href="{{ url }}"> {{ name }} </a>
+            {% else %}
+                {{ name }}
+            {% endif %}
+        </span>
+    {% if not image_left %}
+        <img width="20" class="avatar rounded img-responsive" title="profile picture" src="{{ pic }}">
+    {% endif %}
 </div>
