--- a/soccerbase/templates/soccerbase/tables/table_teams_card.html
+++ b/soccerbase/templates/soccerbase/tables/table_teams_card.html
@@ -52,7 +52,10 @@
             </div>
             {% endif %}
             <div class="">
-               {{ object.display_league_top_parent|default:''|title  }}, {{ object.display_voivodeship|default:''|lower|truncatechars:24 }}
+                <a href="{{ object.get_league_permalink }}">
+                    {{ object.display_league_top_parent|default:''|title  }}
+                </a>,
+                {{ object.display_voivodeship|default:''|lower|truncatechars:24 }}
             </div>
         </div>
                            <div class="sc-cell d-none d-md-flex col-md-4">
@@ -63,7 +66,9 @@
                           </div>
 
                               <div class="sc-cell d-none d-md-flex col-6 col-md-2  text-left">
-                                  {{ object.display_league_top_parent|default:''|title  }}
+                                   <a href="{{ object.get_league_permalink }}">
+                                    {{ object.display_league_top_parent|default:''|title  }}
+                                   </a>
                               </div>
 
                               <div class="sc-cell d-none d-md-flex col-5 col-md-2 text-left">
