Fixed clear params when button 'usun filtr' is clicked - marketplace

--- a/marketplace/templates/marketplace/filter_button_clear.html
+++ b/marketplace/templates/marketplace/filter_button_clear.html
@@ -1,2 +1,5 @@
 {% load i18n %}
-<a href="" class="button" id="clear-filter-button{% if mobile %}-mobile{% endif %}" value="{% trans 'Usuń filtry' %}">{% trans 'Usuń filtry' %}</a>
+<a href="{{ request.path }}" class="button"
+   id="clear-filter-button{% if mobile %}-mobile{% endif %}"
+   value="{% trans 'Usuń filtry' %}">{% trans 'Usuń filtry' %}
+</a>
