final work for new reg flow

--- a/profiles/templates/profiles/partials/_profiles_buttons.html
+++ b/profiles/templates/profiles/partials/_profiles_buttons.html
@@ -1,11 +1,18 @@
  {% load playmaker %}
- 
- {% if editable %}
+ {% load i18n %}
 
+ {% if editable %}
     {% include 'profiles/buttons/edit.html' %}
 
-    {% if user.is_club %}
+    {% if user.is_player or user.is_club or user.is_coach %}
+        {% if user.is_verified %}
+            <a href="#verificationModal" class="btn-act" data-target="#verificationModal" data-toggle="modal" >{% trans 'Zmieniłem klub' %}</a>
+        {% else %}
+            <a href="#verificationModal" class="btn-act" data-target="#verificationModal" data-toggle="modal" >{% trans 'Zweryfikuj swoje konto' %}</a>
+        {% endif %}
+    {% endif %}
 
+    {% if user.is_club %}
         {% get_my_club_link text="Zarządzaj klubem" css_class="btn-act" %}
     {% elif user.is_coach %}
         {% get_my_team_link text="Zarządzaj drużyną" css_class="btn-act" %}
@@ -16,6 +23,5 @@
     {% observed_link user show_user text=True icon='eye' %}
     {% if user.is_club or user.is_player or user.is_coach %}
         {% request_link user show_user %}
-    {% endif %}
-    
+    {% endif %}    
 {% endif %}
