--- a/profiles/templates/profiles/show_player_profile.html
+++ b/profiles/templates/profiles/show_player_profile.html
@@ -38,7 +38,7 @@
           <div class="col-sm-6">{% include 'profiles/cards/player/card_video_3.html' %}</div>
         {% endif %}
       {% endif %}
-    </div><!-- end row -->
+    </div>
   </div>
 </section>
 {% endspaceless %}
