Fixed error connected with approving announcement

--- a/profiles/templates/profiles/modals/_approve_announcement_modal.html
+++ b/profiles/templates/profiles/modals/_approve_announcement_modal.html
@@ -14,8 +14,8 @@
         <div class="modal-body">
 
         </div>
-        <input id="ann-numner" name="ann-numner" type="hidden" value>
-        <input id="ann-type" name="ann-type" type="hidden" value>
+        <input id="ann-numner" name="ann-numner" type="hidden" value="{{ object.pk }}">
+        <input id="ann-type" name="ann-type" type="hidden" value="{{ object|classname }}">
         <div class="ann-number">
 
         </div>
