--- a/profiles/templates/profiles/modals/_no_club_assigned_modal.html
+++ b/profiles/templates/profiles/modals/_no_club_assigned_modal.html
@@ -13,7 +13,11 @@
       </div>
       <div class="modal-body">
         <div>
-            Musisz być połączony z klubem, aby dodać ogłoszenie. Zgłoś się na {% include 'platform/partials/contact_mail.html' %} i wskaż swój klub oraz Twoją funkcję
+            <p>
+                Musisz być połączony z klubem, aby dodać ogłoszenie. Zgłoś się na
+                {% include 'platform/partials/contact_mail.html' %}
+                i wskaż swój klub oraz Twoją funkcję
+            </p>
         </div>
         <div class="mt-4">
           <span class="text-muted"></span>
