Fixed problem with filter button in bases urls

--- a/app/templates/platform/buttons/action_script.html
+++ b/app/templates/platform/buttons/action_script.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
 
-    {% elif not multiple_options %}
+    {% elif multiple_options == False %}
         <div class="dropdown">
             <button class="btn-request dropdown-toggle"
                     type="button"
