--- a/app/templates/platform/partials/_pagination.html
+++ b/app/templates/platform/partials/_pagination.html
@@ -6,8 +6,8 @@
 <div id="pagination" class="pagination d-block mt-2">
     <span class="float-center">
         <span class="step-links text-center">
-            {% if page_obj.has_previous %}
 
+            {% if page_obj.has_previous %}
                 <span class="p-1">
                 {% with "?page=1"|addstr:"&"|addstr:get_params as button_url %}
                     {% include 'platform/buttons/action_button.html' with button_text=_('pierwsza') checks=True button_url=button_url %}
@@ -50,4 +50,40 @@
     </div>
 
 </div>
+<div class="content_detail__pagination cdp" actpage="1">
+
+    {% if page_obj.paginator.has_previous %}
+        <a class="cdp_i page-link toogle-view" href="">prev</a>
+    {% endif %}
+
+    {% if 1 not in custom_range %}
+
+        <a href="" class="cdp_i page-item {% if page == page_obj.number %}active btn-red {% endif %} toogle-view">1
+        </a>
+        <a class="cdp_i toogle-view">..</a>
+
+    {% endif %}
+
+    {% for page in custom_range %}
+        <a href="" class="cdp_i page-item toogle-view {% if page == page_obj.number %}active{% endif %}">{{page}}
+        </a>
+
+    {% endfor %}
+
+    {% if page_obj.number not in page_num_range %}
+        <a class="cdp_i toogle-view">..</a>
+            <a class="cdp_i toogle-view"
+               href="">{{last_page}}
+        </a>
+    {% endif %}
+
+
+    {% if page_obj.paginator.has_next %}
+
+        <a href="" class="cdp_i page-link toogle-view">next</a>
+
+    {% endif %}
+
+</div>
+
 {% endwith %}
