Fixed searching by league and vivos in fantasy page. Fixed searching by vivos in soccerbase. Moved vivos choices to settings

--- a/fantasy/templates/fantasy/filters_desktop.html
+++ b/fantasy/templates/fantasy/filters_desktop.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="filter pr-2"> 
-                {% include 'soccerbase/tables/filters/filter_vivo_ms.html'  with size=120  %}
+                {% include 'soccerbase/tables/filters/filter_vivo_ms.html'  with size=120 vivos=vivos %}
             </div>
 
             <div class="filter-button"> 
